--- a/parkus-client/app/src/main/res/layout/activity_main_map.xml
+++ b/parkus-client/app/src/main/res/layout/activity_main_map.xml
@@ -23,7 +23,7 @@
         android:layout_marginBottom="32dp"
         android:layout_marginEnd="32dp"
         android:clickable="true"
-        android:src="@android:drawable/ic_input_add"
+        android:src="@drawable/add"
         app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
