--- a/parkus-client/app/src/main/res/values/styles.xml
+++ b/parkus-client/app/src/main/res/values/styles.xml
@@ -8,4 +8,13 @@
         <item name="android:navigationBarColor">@color/primary_dark</item>
     </style>
 
+    <style name="StartTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowContentTransitions">true</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="android:colorBackground">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+        <item name="android:navigationBarColor">@color/primary_dark</item>
+    </style>
+
 </resources>
