--- a/parkus-client/app/src/main/res/layout/activity_login.xml
+++ b/parkus-client/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,8 @@
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/login" />
+            android:hint="@string/login"
+            android:textColor="@android:color/white" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.constraint.Guideline
